[gd_scene load_steps=6 format=3 uid="uid://ydgcmvkx7h0p"]

[ext_resource type="PackedScene" uid="uid://tc2s744xdxs4" path="res://scenes/ui/game_menu_screen_background.tscn" id="1_lblk2"]
[ext_resource type="Theme" uid="uid://d12h0sdtb6bla" path="res://scenes/ui/game_ui_theme.tres" id="1_mx5ww"]
[ext_resource type="Script" path="res://scenes/ui/game_menu_screen.gd" id="1_pdasd"]
[ext_resource type="PackedScene" uid="uid://dgpg5uxs34d0w" path="res://scenes/components/mouse_cursor_component.tscn" id="2_tbb8o"]
[ext_resource type="Texture2D" uid="uid://h6kdcvx7wwf5" path="res://assets/ui/mouse_icon.png" id="3_m54i3"]

[node name="GameMenuScreen" type="CanvasLayer"]
script = ExtResource("1_pdasd")

[node name="MouseCursorComponent" parent="." instance=ExtResource("2_tbb8o")]
cursor_component_texture = ExtResource("3_m54i3")

[node name="GameMenuScreenBackground" parent="." instance=ExtResource("1_lblk2")]

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_mx5ww")

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
theme_override_colors/font_color = Color(0.458824, 0.298039, 0.376471, 1)
theme_override_colors/font_shadow_color = Color(1, 1, 1, 1)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_font_sizes/font_size = 54
text = "SarahDewValley"

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4

[node name="StartGameButton" type="Button" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(100, 29)
layout_mode = 2
theme_type_variation = &"GameMenuButton"
text = "Start
"

[node name="SaveGameButton" type="Button" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(100, 29)
layout_mode = 2
theme_type_variation = &"GameMenuButton"
text = "Save"

[node name="ExitGameButton" type="Button" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(100, 29)
layout_mode = 2
theme_type_variation = &"GameMenuButton"
text = "Exit"

[node name="UpdateGameButton" type="Button" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(100, 29)
layout_mode = 2
theme_type_variation = &"GameMenuButton"
text = "Update
"

[node name="DeleteSaveButton" type="Button" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(100, 29)
layout_mode = 2
theme_type_variation = &"GameMenuButton"
theme_override_font_sizes/font_size = 18
text = "Delete Save"

[node name="ConfirmationDialog" type="ConfirmationDialog" parent="."]
title = "Delete Game Save?"
position = Vector2i(0, 36)
min_size = Vector2i(150, 50)
ok_button_text = "Delete"
dialog_autowrap = true

[connection signal="pressed" from="MarginContainer/VBoxContainer/StartGameButton" to="." method="_on_start_game_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/SaveGameButton" to="." method="_on_save_game_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ExitGameButton" to="." method="_on_exit_game_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/UpdateGameButton" to="." method="_on_update_game_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/DeleteSaveButton" to="." method="_on_delete_save_button_pressed"]
[connection signal="confirmed" from="ConfirmationDialog" to="." method="_on_confirmation_dialog_confirmed"]
